Refine explanations in Homework09.ipynb for model accuracy and overfitting

--- a/Homework09.ipynb
+++ b/Homework09.ipynb
@@ -455,8 +455,9 @@
     ]
    },
    "source": [
-    "- An accuracy of 1.0 means the trained model perfectly identifies which camera is which after training.\n",
-    "- While this would typically indicate overfitting and be considered undesirable, I would say this is acceptable here because the training data consists of CPA scores rather than raw camera footage, meaning the raw footage has already been abstracted into higher-level features."
+    "- An accuracy of 1.0 means the trained model perfectly identifies which camera is which based on the training data.\n",
+    "- While this typically indicates overfitting and is considered undesirable, I would say this is acceptable here.\n",
+    "- This is because the training data consists of CPA scores rather than raw camera footage and the raw footage has already been abstracted enough into higher-level features."
    ]
   },
   {
